<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_home_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/home_favorite"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tl_home_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_cc">

            <TableRow
                android:id="@+id/tr_home_cc_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_cc_fromage1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/placeholder_fromage" />

                <ImageView
                    android:id="@+id/iv_home_cc_fromage2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/placeholder_fromage" />

                <ImageView
                    android:id="@+id/iv_home_cc_fromage3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/placeholder_fromage" />

            </TableRow>

            <TableRow
                android:id="@+id/tr_home_cc_labels"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_home_cc_fromage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_label_fromage"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_home_cc_fromage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_label_fromage"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_home_cc_fromage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_label_fromage"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_home_alpagesemaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/home_alpagesemaine"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_home_cc" />

        <ImageView
            android:id="@+id/iv_home_alpagesemaine"
            android:layout_width="370dp"
            android:layout_height="196dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:src="@drawable/placeholder_alpage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_alpagesemaine" />

        <TextView
            android:id="@+id/tv_home_alpagesemaine_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="32dp"
            android:text="@string/home_label_alpage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_home_alpagesemaine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>